Remove EXPOSE from this image and add reference link for node-ltd

--- a/ubuntu/versions/16.04/Dockerfile
+++ b/ubuntu/versions/16.04/Dockerfile
@@ -24,10 +24,9 @@ RUN apt-get update && apt-get -qq -o=Dpkg::Use-Pty=0 install ca-certificates cur
     uwsgi-core      &&\
   rm -rf /var/lib/apt/lists/*
   
-# All npm 3.X global/local packages must be in the same docker layer
 # https://github.com/npm/npm/issues/9863
-# https://deb.nodesource.com/node_4.x/pool/main/n/nodejs/nodejs_4.6.0-1nodesource1~xenial1_amd64.deb
 RUN \
+  # curl https://deb.nodesource.com/node_4.x/pool/main/n/nodejs/nodejs_4.6.0-1nodesource1~xenial1_amd64.deb --output node.deb &&\
   curl https://deb.nodesource.com/node_6.x/pool/main/n/nodejs/nodejs_6.8.1-1nodesource1~xenial1_amd64.deb --output node.deb &&\
   dpkg -i node.deb &&\
   rm node.deb &&\
@@ -41,8 +40,6 @@ RUN \
 RUN echo '#!/bin/sh\n\nexec "$@"' > /usr/local/bin/docker-entrypoint.sh &&\
   chmod 0755 /usr/local/bin/docker-entrypoint.sh &&\
   ln -s /usr/local/bin/docker-entrypoint.sh /
-
-EXPOSE 80 443 2812 3000 8000
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--", "/usr/local/bin/docker-entrypoint.sh"]
 
